slide css and fix to menu items in nav behind slide

--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@ header {
 
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1400px) {
 
 
 
